; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/usbvision/extr_usbvision-video.c_vidioc_streamoff.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/usbvision/extr_usbvision-video.c_vidioc_streamoff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.usb_usbvision = type { i64 }

@V4L2_BUF_TYPE_VIDEO_CAPTURE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@stream_on = common dso_local global i64 0, align 8
@video = common dso_local global i32 0, align 4
@s_stream = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, i32)* @vidioc_streamoff to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_streamoff(%struct.file* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.usb_usbvision*, align 8
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.file*, %struct.file** %5, align 8
  %10 = call %struct.usb_usbvision* @video_drvdata(%struct.file* %9)
  store %struct.usb_usbvision* %10, %struct.usb_usbvision** %8, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @V4L2_BUF_TYPE_VIDEO_CAPTURE, align 4
  %13 = icmp ne i32 %11, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i32, i32* @EINVAL, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %4, align 4
  br label %33

17:                                               ; preds = %3
  %18 = load %struct.usb_usbvision*, %struct.usb_usbvision** %8, align 8
  %19 = getelementptr inbounds %struct.usb_usbvision, %struct.usb_usbvision* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @stream_on, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %30

23:                                               ; preds = %17
  %24 = load %struct.usb_usbvision*, %struct.usb_usbvision** %8, align 8
  %25 = call i32 @usbvision_stream_interrupt(%struct.usb_usbvision* %24)
  %26 = load %struct.usb_usbvision*, %struct.usb_usbvision** %8, align 8
  %27 = load i32, i32* @video, align 4
  %28 = load i32, i32* @s_stream, align 4
  %29 = call i32 @call_all(%struct.usb_usbvision* %26, i32 %27, i32 %28, i32 0)
  br label %30

30:                                               ; preds = %23, %17
  %31 = load %struct.usb_usbvision*, %struct.usb_usbvision** %8, align 8
  %32 = call i32 @usbvision_empty_framequeues(%struct.usb_usbvision* %31)
  store i32 0, i32* %4, align 4
  br label %33

33:                                               ; preds = %30, %14
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local %struct.usb_usbvision* @video_drvdata(%struct.file*) #1

declare dso_local i32 @usbvision_stream_interrupt(%struct.usb_usbvision*) #1

declare dso_local i32 @call_all(%struct.usb_usbvision*, i32, i32, i32) #1

declare dso_local i32 @usbvision_empty_framequeues(%struct.usb_usbvision*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
